Add diffrant Taybs of Payment Class

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -13,3 +13,7 @@
 /RoleFactory.class
 /IPaymentFactory.class
 /PaymentFactory.class
+/IPayment.class
+/CashPayment.class
+/CreditCardPay.class
+/WalletPay.class
