Add Etisalat and orange internet classes and have updates in classes

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -35,3 +35,7 @@
 /MobileRechargeFactory.class
 /MonthlyReceiptLandline.class
 /OrangeMobile.class
+/QuarterReceiptLandline.class
+/EtisalatInternet.class
+/IInternetPayment.class
+/OrangeInternet.class
