Add vodafone Internet class

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -39,3 +39,6 @@
 /EtisalatInternet.class
 /IInternetPayment.class
 /OrangeInternet.class
+/VodafoneInternet.class
+/VodafoneMobile.class
+/WeMobile.class
