--- a/src/.gitignore
+++ b/src/.gitignore
@@ -39,6 +39,13 @@
 /EtisalatInternet.class
 /IInternetPayment.class
 /OrangeInternet.class
+/CancerHospitalsDonation.class
+/DonationFactory.class
+/IDonation.class
+/IDonationFactory.class
+/NonProfitableOrganizationDonation.class
+/VodafoneMobile.class
+/WeMobile.class
 /VodafoneInternet.class
 /VodafoneMobile.class
 /WeMobile.class
